vpp_sources = [
	'allocator.cpp',
	'buffer.cpp',
	'bufferOps.cpp',
	'commandBuffer.cpp',
	'debug.cpp',
	'descriptor.cpp',
	'device.cpp',
	'formats.cpp',
	'framebuffer.cpp',
	'image.cpp',
	'imageOps.cpp',
	'instance.cpp',
	'memory.cpp',
	'memoryMap.cpp',
	'memoryResource.cpp',
	'physicalDevice.cpp',
	'pipeline.cpp',
	'procAddr.cpp',
	'queue.cpp',
	'renderPass.cpp',
	'renderer.cpp',
	'resource.cpp',
	'shader.cpp',
	'sharedBuffer.cpp',
	'submit.cpp',
	'surface.cpp',
	'swapchain.cpp',
	'sync.cpp',
	'trackedDescriptor.cpp',
	'work.cpp',
	'util/file.cpp']

vpp_lib = library('vpp',
	sources: vpp_sources,
	dependencies: deps,
	cpp_args: ['-DDLG_DEFAULT_TAGS="vpp",'],
	include_directories: [vpp_inc, vpp_inc_private],
	install: true)
